Fixed overflow problem.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.pane {
+	position: absolute;
+	height: 100%;
+	width: calc(50% - 1px);
+	overflow: auto;
+}
+
 .todo {
 	height: 2em;
 }
