--- a/src/components/todoPane/style.css
+++ b/src/components/todoPane/style.css
@@ -1,7 +1,4 @@
 .todoPane {
-	position: absolute;
-	height: 100%;
-	width: calc(50% - 1px);
 	top: 0%;
 	left: 0%;
 }
